--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
       </section>
       <section>
         <div class="container my-5">
-          <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-5">
+          <div class="row d-flex">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-5 order-md-2 order-sm-2">
               <div class="shopping__left">
                 <div class="shopping__item shadow p-3 mb-5 bg-body rounded d-flex">
                     <div class="icon">
@@ -280,7 +280,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-7">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-7 order-md-1 order-sm-1">
               <div class="shopping__right">
                 <img class="pb-5 img-fluid" src="images/shopping.png" alt="" />
               </div>
